--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,30 @@
 ---
+import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header/Header.jsx';
+import './index.scss';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Pakukuljetus">
+    <nav>Nav</nav>
+    <Header/>
+    <main>
+        Main
+        <div class="container bg-alt">
+            <section>
+                Card Section
+            </section>
+        </div>
+        <div class="container">
+            <section>
+                Text Section
+            </section>
+        </div>
+    </main>
+    <footer>
+        <div class="container">
+            <section>
+                Footer
+            </section>
+        </div>
+    </footer>
+</Layout>
