--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header/Header.jsx';
+import Cards from '../components/Cards/Cards.jsx';
+import Description from '../components/Description/Description.jsx';
 import './index.scss';
 ---
 
@@ -8,17 +10,8 @@ import './index.scss';
     <nav>Nav</nav>
     <Header/>
     <main>
-        Main
-        <div class="container bg-alt">
-            <section>
-                Card Section
-            </section>
-        </div>
-        <div class="container">
-            <section>
-                Text Section
-            </section>
-        </div>
+        <Cards />
+        <Description />
     </main>
     <footer>
         <div class="container">
