--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,13 @@ import './index.scss';
 ---
 
 <Layout title="Pakukuljetus">
-    <nav>Nav</nav>
+    <nav>
+        <svg width="58" height="48" viewBox="0 0 58 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4 4H54" stroke="white" stroke-width="8" stroke-linecap="round"/>
+            <path d="M4 24H54" stroke="white" stroke-width="8" stroke-linecap="round"/>
+            <path d="M4 44H54" stroke="white" stroke-width="8" stroke-linecap="round"/>
+        </svg>
+    </nav>
     <Header/>
     <main>
         <Cards />
