--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -18,6 +18,8 @@ nav {
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    -webkit-transform: translateZ(3);
+    transform: translateZ(3);
 
     > svg {
         padding: 20px;
