Add hydration for navbar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import "./index.scss";
 ---
 
 <Layout title="Pakukuljetus">
-    <Navbar />
+    <Navbar client:load />
     <Header />
     <Main></Main>
     <Footer />
