--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Main from "../components/Pages/Index/Main";
 import "./index.scss";
 ---
 
-<Layout title="Pakukuljetus">
+<Layout>
     <Navbar client:load />
     <Header />
     <Main></Main>
