Fix canonical link

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const Meta = {
 
         <meta name=" robots" content=" index, follow" />
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-        <link rel="canonical" href="https://www.pakukuljetus.fi/" />
+        <link rel="canonical" href={Meta.link} />
         <meta name="generator" content={Astro.generator} />
         <title>{Meta.title_long}</title>
     </head>
